[gd_scene load_steps=9 format=3 uid="uid://do15h1qi5veiv"]

[ext_resource type="Script" path="res://Scripts/BaseCar.gd" id="1_6lxae"]
[ext_resource type="PackedScene" uid="uid://bobr5wuih38c1" path="res://Scenes/VehicleCamera3D.tscn" id="1_leb43"]
[ext_resource type="AudioStream" uid="uid://byuqaodia6y14" path="res://Sounds/explosion_distorted.wav" id="2_60q2n"]
[ext_resource type="Script" path="res://Scripts/Spedometer.gd" id="3_ghamt"]
[ext_resource type="Texture2D" uid="uid://caaggivf8amd5" path="res://Textures/spedometer.png" id="3_tcifw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f6dxx"]
size = Vector3(2.08254, 1.60117, 5.39934)

[sub_resource type="LabelSettings" id="LabelSettings_amto1"]
font_size = 14

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tn65c"]

[node name="BaseCar" type="VehicleBody3D"]
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, 0)
script = ExtResource("1_6lxae")

[node name="Wheel0" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03343, 0.340338, -1.57977)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel1" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02622, 0.340338, -1.57977)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03343, 0.340338, 1.51869)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel3" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02622, 0.340338, 1.51869)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.689432, -0.062412)
shape = SubResource("BoxShape3D_f6dxx")

[node name="ExplosionPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_60q2n")

[node name="Camera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2149, 0)

[node name="VehicleCamera3d" parent="Camera" instance=ExtResource("1_leb43")]
transform = Transform3D(1, 0, 0, 0, 0.974347, 0.225053, 0, -0.225053, 0.974347, 0, 1.97324, 6.19962)
target_distance = 6
target_height = 3

[node name="Hud" type="CanvasLayer" parent="."]
layer = 2

[node name="speed" type="Label" parent="Hud"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50

[node name="power" type="Label" parent="Hud"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -109.0
offset_right = 20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50

[node name="spedometer" type="Control" parent="Hud" node_paths=PackedStringArray("gauge", "text")]
layout_mode = 3
anchors_preset = 0
offset_left = 837.0
offset_top = 490.0
offset_right = 837.0
offset_bottom = 490.0
script = ExtResource("3_ghamt")
speed0degrees = -130.0
gauge = NodePath("gauge")
text = NodePath("value")

[node name="background" type="TextureRect" parent="Hud/spedometer"]
layout_mode = 0
offset_right = 186.0
offset_bottom = 150.0
texture = ExtResource("3_tcifw")
expand_mode = 1

[node name="value" type="Label" parent="Hud/spedometer"]
layout_mode = 2
offset_left = 74.0
offset_top = 90.0
offset_right = 114.0
offset_bottom = 113.0
label_settings = SubResource("LabelSettings_amto1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gauge" type="TextureRect" parent="Hud/spedometer"]
layout_mode = 0
offset_left = 73.0
offset_top = 33.0
offset_right = 113.0
offset_bottom = 73.0
rotation = -2.26893
scale = Vector2(0.1, 1)
pivot_offset = Vector2(20, 40)
texture = SubResource("PlaceholderTexture2D_tn65c")
expand_mode = 1
metadata/_edit_use_anchors_ = true
